--- a/app/views/deals/categories.html.erb
+++ b/app/views/deals/categories.html.erb
@@ -6,21 +6,22 @@
       <div class="category_body clearfix">
         <div class="left">
           <ul>
-            <div class="middle_box_insta"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Save $10 when you spend $100" /></a></div>
-            <li><a href="/deals/bestdeals"># The Best Deals</a></li>
-            <li><a href="/deals/promo_codes"># Promo Codes</a></li>
+            <div class="middle_box_insta"><a target="_blank" href="/storepromotions"><img src="<%=asset_path 'store_deals.png' %>" alt="Save $10 when you spend $100" /></a></div>
+            <div class="middle_box_insta"><a target="_blank" href="/deals/bestdeals"><img src="<%=asset_path 'amazon_deals.png' %>" alt="Save $10 when you spend $100" /></a></div>
+            <!-- <li><a href="/storepromotions"># Bargain By Store</a></li>
+            <li><a href="/deals/bestdeals"># Best Deals Of Amazon</a></li>
+            <li><a href="/deals/promo_codes"># Coupon Of Amazon</a></li>
             <li><a href="/deals/most_reviewed"># Most-Reviewed</a></li>
-            <li><a href="/deals/promotions"># Promotions</a></li>
-            <li><a href="/deals/quick_search"># Quick Search</a></li>            
+            <li><a href="/deals/quick_search"># HotDeal Finder</a></li>           -->  
           </ul>
         </div>
 
-        <div class="right">
+        <!-- <div class="right">
           <ul>
             <li><a href="/recommends"># Editor's Pick</a></li>
             <li><a href="/"># Gadgets</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
 
