--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -105,7 +105,7 @@
                       <% running_total =  (hotdeal.h_spare_43 - hotdeal.h_spare_44) / hotdeal.h_spare_43 * 100 %>
                       <p class="h_price"><%= number_to_currency(hotdeal.h_spare_43) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_44) %></span><span class="span_02"> | <%= number_to_percentage(running_total, precision: 0) %> OFF )</span></p>
                     <% end %>
-                    <a target="_blank" href="<%= hotdeal.h_link %>">[ Take This Deals ]</a><br />
+                    <a target="_blank" href="<%= hotdeal.h_link %>"><%= hotdeal.h_link %></a><br />
                   </div>
                 <% end %>
               <span class="check_more"> <a target="_blank" href="/hotdeals">Check More Bargain: www.ohigottabuythis.net/hotdeals</a></span>
