--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -7,6 +7,7 @@
       <%= f.association :spcategory, label: 'Category Of Stores' %><br />
       <!-- <%= f.input :sp_store_name, label: 'Store Name' %> -->
       <%= f.input :sp_image, label: 'Store Logo' %>
+      <%= f.input :sp_spare_02, label: 'Product Image' %>
       <%= f.input :sp_link, label: 'Store Link' %>
       <%= f.input :sp_title, label: 'Title of Deal'%>
       <%= f.input :sp_spare_01, label: 'Korean Title'%>
