--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -170,7 +170,7 @@
                   <p><%= storepromotion.sp_title %></p>
                   <p class="h_price"><%= number_to_currency(storepromotion.sp_spare_43) %> <span class="span_01"><%= number_to_currency(storepromotion.sp_spare_42) %></span><span class="span_02"></span></p>
                   <a href="<%= storepromotion.sp_link %>"><%= storepromotion.sp_link %></a>
-                </div>
+                </div><br /><br />
               <% end %>
             </div>
 
@@ -187,7 +187,7 @@
                   <p><%= storepromotion.sp_title %></p>
                   <p class="h_price"><%= number_to_currency(storepromotion.sp_spare_43) %> <span class="span_01"><%= number_to_currency(storepromotion.sp_spare_42) %></span><span class="span_02"></span></p>
                   <a href="<%= storepromotion.sp_link %>">Shop Now</a>
-                </div>
+                </div><br /><br />
               <% end %>
             </div>
           </div>
