--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -168,9 +168,9 @@
                     <p><%= storepromotion.spcategory.name %></p>
                   <% end %>
                   <p><%= storepromotion.sp_title %></p>
-                  <p class="h_price"><%= number_to_currency(storepromotion.sp_spare_43) %> <span class="span_01"><%= number_to_currency(storepromotion.sp_spare_42) %></span><span class="span_02"></span></p>
+                  <p class="h_price"><%= number_to_currency(storepromotion.sp_spare_43) %> <span class="span_01">( Was <%= number_to_currency(storepromotion.sp_spare_42) %> )</span><span class="span_02"></span></p>
                   <a href="<%= storepromotion.sp_link %>"><%= storepromotion.sp_link %></a>
-                </div><br /><br />
+                </div><br />
               <% end %>
             </div>
 
@@ -185,9 +185,9 @@
                     <p><%= storepromotion.spcategory.name %></p>
                   <% end %>
                   <p><%= storepromotion.sp_title %></p>
-                  <p class="h_price"><%= number_to_currency(storepromotion.sp_spare_43) %> <span class="span_01"><%= number_to_currency(storepromotion.sp_spare_42) %></span><span class="span_02"></span></p>
+                  <p class="h_price"><%= number_to_currency(storepromotion.sp_spare_43) %> <span class="span_01">( Was <%= number_to_currency(storepromotion.sp_spare_42) %> )</span><span class="span_02"></span></p>
                   <a href="<%= storepromotion.sp_link %>">Shop Now</a>
-                </div><br /><br />
+                </div><br />
               <% end %>
             </div>
           </div>
