--- a/app/views/promocodes/index.html.erb
+++ b/app/views/promocodes/index.html.erb
@@ -2,7 +2,7 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
     <%= render 'shared/header_short' %>
-    <div class="dealpage_title"><p>The Coupon Codes on Amazon</p></div>
+    <div class="dealpage_title"><p>The Coupons on Amazon</p></div>
     <%= render 'promocodes/header' %>  
     
     <!-- <div class="amz_slider_banner">
