--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -21,6 +21,7 @@
 
       <ul class="clearfix">
         <p>MENU</p>
+        <li class="top_menu"><a href="/deals/bestdeals">Amazon's Bargain</a></li>
         <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li>
         <li><a href="/deals/bestdeals">TODAY'S DEALS,</a></li>
         <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
@@ -31,7 +32,9 @@
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
-        
+        <li class="top_menu"><a href="/deals/stores">Bargain By Store</a></li>
+        <li><a href="/storepromotions">COUPONS & PROMOTIONS,</a></li>
+        <li><a href="/storedeals">THE BEST DEALS</a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
