--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -15,9 +15,16 @@
     <div class="gnb_m">
       <ul class="clearfix">
         <p>MENU</p>
-        <li><a href="/deals/stores">HOME,</a></li>
-        <li class="coumos1"><a href="/storepromotions">SALES OFFER & PROMOTIONS,</a></li>
-        <li><a href="/storedeals">BARGAINS BY STORE</a></li>
+        <li class="top_menu"><a href="/deals/bestdeals">Amazon's Bargain</a></li>
+        <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li>
+        <li><a href="/deals/bestdeals">TODAY'S DEALS,</a></li>
+        <li><a href="/deals/promo_codes">TODAY'S COUPON CODES,</a></li>
+        <li><a href="/deals/quick_search">REAL TIME HOT DEAL FINDER,</a></li>
+        <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
+        <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
+        <li class="top_menu"><a href="/deals/stores">Bargain By Store</a></li>
+        <li><a href="/storepromotions">COUPONS & PROMOTIONS,</a></li>
+        <li><a href="/storedeals">THE BEST DEALS</a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
