--- a/app/views/promocodes/_header.html.erb
+++ b/app/views/promocodes/_header.html.erb
@@ -19,16 +19,20 @@
     <div class="gnb_m">
       <ul class="clearfix">
         <p>MENU</p>
-        <li><a href="/deals/bestdeals">TODAY"S BEST</a></li>
-        <li><a href="/hotdeals">BARGAINS,</a></li>
-        <!-- <li><a href="/deals/bestdeals">- DAILY DEALS,</a></li> -->
+        <li class="top_menu"><a href="/deals/bestdeals">Amazon's Bargain</a></li>
+        <li><a href="/deals/bestdeals">TODAY'S BEST</a></li>
+        <li><a href="/hotdeals">BARGAIN</a></li>
+        <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
         <li><a href="/promocodes">COUPON CODES,</a></li>
-        <!-- <li><a href="/deals/promo_codes">- DAILY CODES,</a></li> -->
+        <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
         <li><a href="/deals/quick_search">REAL TIME HOT DEAL FINDER,</a></li>
+        <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
-        <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
-        <li><a href="/deals/promotions">PROMOTIONS,</a></li>
+        <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
+        <li class="top_menu"><a href="/deals/stores">Bargain By Store</a></li>
+        <li><a href="/storepromotions">COUPONS & PROMOTIONS,</a></li>
+        <li><a href="/storedeals">THE BEST DEALS</a></li>
         
         <li><% if can? :update, @promocodes %><%= link_to 'New Code', new_promocode_path %><% end %></li>
       </ul>
