--- a/app/views/hotdeals/_usa_kor.html.erb
+++ b/app/views/hotdeals/_usa_kor.html.erb
@@ -42,12 +42,26 @@
       
       <div class="box line_three">
         <p>Shipping</p>
-        <% if @hotdeal.h_spare_63.present? %>
-          <% @hotdeal.h_spare_63 %>
-          <em>Free</em>
-        <% else %>
-          <em>5.99</em>
-        <% end %>
+          <% if @hotdeal.h_spare_63.present? %>         
+            <% if @hotdeal.h_spare_63.present? %>         
+              <% if @hotdeal.h_spare_63 > 0 %>            
+                <em><%= number_to_currency(@hotdeal.h_spare_63) %></em> 
+              <% else %>  
+                <% if @hotdeal.h_spare_63 = 0 %>  
+                <em>Free <% number_to_currency(@hotdeal.h_spare_63) %></em> 
+                <% end %> 
+              <% end %> 
+            <% else %>  
+              <em>Free</em>          
+            <%end %>  
+          <% else %>
+            <% if @hotdeal.h_spare_18.present? %>
+            <% @hotdeal.h_spare_18 %>
+            <em>Free</em>
+            <% else %>
+              <em>5.99</em>
+            <% end %>
+          <% end %>
       </div>
       
       <div class="box line_three">
@@ -70,8 +84,8 @@
     <div class="info_box clearfix">
       <span>
         <ul>
-          <% if @hotdeal.h_spare_63.present? %>
-            <% @hotdeal.h_spare_63 %>
+          <% if @hotdeal.h_spare_18.present? %>
+            <% @hotdeal.h_spare_18 %>
             <li>Free Shipping: $25+ of eligible items, fulfilled by Amazon or <a target="_blank" href="/blogs/blog_01_amz_prime">Prime.<i></i></a></li>
           <% else %>
             <li><a target="_blank" href="https://amzn.to/2uvHHM2">Take "Amazon Prime" to save Shipping and handling fee.</a><i></i></li>
