deals hot_deals

--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -27,7 +27,7 @@
       <%= f.input :h_spare_43, label: 'Original Price' %>
       <%= f.input :h_spare_44, label: 'Current Price' %>
       <!-- <%= f.input :h_percentage, label: 'Discount Percentage' %> -->
-      <!-- <%= f.input :h_spare_63, label: 'Shipping Fee' %> -->
+      <%= f.input :h_spare_63, label: 'Shipping Fee' %>
     
       <!-- <p>(when we don't know sales of percentage)</p> -->
       <!-- <div class="pricing clearfix"> -->
