--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -11,12 +11,12 @@
         <!-- <%= f.select :p_banner, ([["Do You Have A Banner?", ""], "YES"])%> -->
         <!-- <%= f.select :p_spare_02, ([["In Stock", ""], "Only in a few stock left"])%> -->
         <!-- <%= f.select :p_spare_05, ([["Subscribe & Save?", ""], "Yes"])%> -->
-        <%= f.select :p_spare_54, ([["Free shipping?", ""], "Yes"])%><br /><br />
+        <%= f.select :p_spare_10, ([["Free shipping?", ""], "Yes"])%><br /><br />
         <!-- <%= f.select :p_spare_01, ([["Ship to Korea", ""], "Yes"])%> -->
         <div class="pricing clearfix">
           <%= f.input :p_spare_26, label: 'List Price' %>
           <%= f.input :p_spare_27, label: 'Discount Percentage' %>
-          <!-- <%= f.input :p_spare_54, label: 'Shipping Fee' %> -->
+          <%= f.input :p_spare_54, label: 'Shipping Fee' %>
         </div>
         <div class="basic_info">
           <%= f.input :p_image, label: 'Image URL' %>
